# GOIT-Python_Web-HW-8

./: README.md  pyproject.toml
part_1/: config.ini  main.py  models.py  seeds.py
part_2/: config.ini  consumer.py  models.py  producer.py
